# seqtree

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  SOURCES.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
appendix/: .gitignore  Makefile  evalue.tex  refs.bib
bench/: bench.py  bench_epitope.py  bench_evalue.py  bench_evalue_matrix.py  bench_gapblock.py  bench_gnuplot.py  bench_methods.py  bench_mhc_guess.py  bench_pairwise.py  bench_pmhc.py  bench_score_matrix.py  bench_seqtree.cpp  gap_rules_by_locus.py  gen_control.py  gen_matrices.py  gen_olga.py  gen_pam50.py
bench/plots/: make_plots.sh  plot_retrieval_pr.py
bench/tables/: gen_perf_table.py  gen_retrieval_table.py  make_tables.sh  perf_baseline.tsv  retrieval_pr.tsv
docs/: Makefile  api.rst  benchmarks.rst  conf.py  distance.rst  engines.rst  evalue.rst  examples.rst  gapblock.rst  getting-started.rst  index.rst  pairwise.rst  pmhc.rst  requirements.txt  roadmap.rst
docs/_static/: custom.css
examples/: 01_gapped_search.py  02_sequence_dendrogram.py  03_indel_positions.py  04_island_profile.py
include/seqtree/: kmer_index.hpp  seqtree.hpp  types.hpp
python/seqtree/: __init__.py  control.py  distance.py  evalue.py  gapblock.py  layout.py  pairwise.py  pmhc.py  pmhc_evalue.py  seeds.py
skills/seqtree/: SKILL.md
src/: _bindings.cpp  atomic_write.hpp  blosum45.inc  blosum62.inc  blosum80.inc  codec.cpp  distance.cpp  engine_seqtm.cpp  engine_seqtrie.cpp  engines.hpp  gapblock.cpp  index.cpp  kmer_index.cpp  pairwise.cpp  pam100.inc  pam250.inc  pam50.inc  positional_matrix.cpp  searcher.cpp  structural.inc  substitution_matrix.cpp  trie.cpp  trie.hpp
tests/cpp/: test_codec.cpp  test_edge.cpp  test_engines.cpp  test_kmer_index.cpp  test_matrix.cpp  test_positional.cpp  test_serialize.cpp  test_trie.cpp
tests/python/: _olga.py  conftest.py  test_batch_threads.py  test_build_search.py  test_cache_concurrency.py  test_control.py  test_distance.py  test_doc_coverage.py  test_edge_cases.py  test_engine_guards.py  test_evalue.py  test_gapblock.py  test_matrix.py  test_olga.py  test_oracle_tables.py  test_pairwise.py  test_perf_regression.py  test_pmhc.py  test_sanity.py  test_seeds.py  test_serialize.py
